# finna

./: README.md  agent.py  bot.py  local_env.yml  pyproject.toml  requirements.txt
